Thu Jul  8 09:16:21 2004  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Added documentation about the wild card support in MPC.

        * modules/ProjectCreator.pm:

          If grouping is used in source files, put automatically added files
          in corresponding groups.

        * templates/vc7.mpd:

          Use <%ucw()%> for the custom_type which looks better in the
          graphical interface.

Tue Jul  6 11:29:07 2004  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Added documentation for new pseudo template variables for use
          within the command, commandflags, postcommand and output_option
          settings.

        * modules/ProjectCreator.pm:

          Fixed a bug where mixing grouped and non-grouped files would cause
          the non-grouped files to be ignored.

          Added new pseudo template variables for the null device, >, <, &&
          and ||.

        * modules/VC7ProjectCreator.pm:

          Override defaults for the >, < and && values to correctly support
          these within the XML projects.

        * templates/em3vcp.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:

          Added support for grouping header, inline, template, resource and
          documentation files.

Fri Jul  2 10:27:03 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc7.mpd:

          Default the machine setting to X86.

Fri Jul  2 08:17:48 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:

          Return the same kind of crlf on OS/2 as we do on Windows.  Just in
          case someone tries to use MPC on OS/2.

        * modules/ProjectCreator.pm:

          When returning the list of grouped source files, convert the
          slashes if it is necessary.

        * templates/vc7.mpd:

          The above change allows us to use file grouping for vc7.
          Previously, files would have a forward slash in the name (if they